<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SingleOnGoing"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <fragment
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_300"
            android:name="chain.map.warriors.chainstore.base.BaseFragment"
            android:id="@+id/ongoing_map" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/normal"
            android:layout_marginLeft="@dimen/normal">
            <chain.map.warriors.chainstore.view.customView.TextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_to"
                android:id="@+id/ongoing_location"
                android:textSize="@dimen/normal"
                android:textColor="@color/black"/>
            <chain.map.warriors.chainstore.view.customView.TextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:id="@+id/ongoing_distance"
                android:textSize="@dimen/normal"
                android:textColor="@color/black"
                />
            <chain.map.warriors.chainstore.view.customView.TextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:id="@+id/ongoing_time"
                android:textSize="@dimen/normal"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/size_100"
                android:layout_height="@dimen/size_100"
                android:src="@drawable/avatar_user"
                android:id="@+id/ongoing_shipper_avatar"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20sp">
                <chain.map.warriors.chainstore.view.customView.TextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginBottom="20sp"
                    android:id="@+id/ongoing_username"
                    android:textSize="@dimen/normal"
                    android:textColor="@color/black"/>
                <chain.map.warriors.chainstore.view.customView.TextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:layout_marginBottom="20sp"
                    android:id="@+id/ongoing_phone"
                    android:textColor="@color/black"/>/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm"
            android:orientation="vertical"
            android:visibility="gone">
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                android:layout_gravity="center"
                android:numStars="5"
                android:stepSize="1"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pay"
                android:text="Make payment"
                android:enabled="false"
                android:background="@drawable/button" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>