<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/my_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_130">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/banner"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_marginTop="@dimen/normal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/lTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <chain.map.warriors.chainstore.view.customView.CustomerEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lEditEmail"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="20dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <chain.map.warriors.chainstore.view.customView.CustomerEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lEditPassword"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="20dp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="@dimen/size_300"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:id="@+id/btnLogin"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>